# rgbw-driver-i2c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
driver/: rgbw-driver.c  rgbw-driver.h
i2c-api/: i2chw.c  i2chw.h
tests/: test_rgbw_driver.c
